fixed spacings

--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h1{
-    margin: 0px;
+    margin: 10px 0px;
     
 }
 
@@ -44,6 +44,7 @@ h1{
     justify-content: center;
     align-items: center;
     /* background-color: rgb(255, 255, 255); */
+    padding-bottom: 15px;
 }
 
 /* .celtics-score{
